# bubble-agent

./: .copier-answers.yaml  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  bubble-agent  bubble-agent.example.conf  bwrap-agent.sh  justfile  pyproject.toml  zensical.toml
.devcontainer/: devcontainer.json
.github/workflows/: publish-to-pypi.yaml  publish-to-test-pypi.yaml
docs/: api.md  configuration.md  getting-started.md  index.md  installation.md  usage.md  workspace.md
scripts/: bubble-agent.sh
src/bubble_agent/: __init__.py  __main__.py  cli.py  config.py  sandbox.py  workspace.py
tests/: test_bubble_agent.py  test_cli.py
