[project]
name = "bubble-agent"
dynamic = ["version"]
description = "Run your coding agent in a bubble."
authors = [{ name = "ak1ra", email = "git@ak1ra.xyz" }]
dependencies = [
    "argcomplete>=3.6.3",
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = []
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"

[project.urls]
Homepage = "https://github.com/ak1ra-lab/bubble-agent"
Repository = "https://github.com/ak1ra-lab/bubble-agent"
Documentation = "https://ak1ra-lab.github.io/bubble-agent/"

[project.scripts]
bubble-agent = "bubble_agent.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
fallback_version = "0.1.0"

[tool.hatch.build.targets.wheel]
packages = ["src/bubble_agent"]

[dependency-groups]
tests = ["pytest>=9.1.1", "pytest-cov>=7.1.0"]
lint = ["ruff>=0.15.20", "ty>=0.0.54"]
docs = ["zensical>=0.0.46", "mkdocstrings-python>=2.0.5"]
dev = [
    { include-group = "tests" },
    { include-group = "lint" },
    { include-group = "docs" },
    "pre-commit>=4.6.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
